--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.11.10",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,8 +18,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "graphql": "^16.9.0",
+    "jotai": "^2.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.5",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
@@ -24,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "graphql-codegen"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +53,9 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.4",
+    "@graphql-codegen/typescript": "^4.1.3",
+    "@graphql-codegen/typescript-operations": "^4.4.1",
     "@types/graphql": "^14.5.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34"
